# libcoolmic-dsp

./: meson.build
include/coolmic-dsp/: iohandle.h  meson.build  snddev.h
src/: buffer.c  enc.c  enc_opus.c  iobuffer.c  iohandle.c  meson.build  snddev.c  snddev_null.c  snddev_sine.c  snddev_stdio.c  tee.c  transform.c
