coolmic_dsp_headers = files(
    'buffer.h',
    'coolmic-dsp.h',
    'enc.h',
    'iobuffer.h',
    'iohandle.h',
    'logging.h',
    'metadata.h',
    'shout.h',
    'simple.h',
    'snddev.h',
    'tee.h',
    'transform.h',
    'util.h',
    'vumeter.h',
)

install_headers(coolmic_dsp_headers,
    subdir : 'coolmic-dsp')
